webapp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewebapp-service
spec:
  selector:
    app: simplewebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
