webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplewebapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
    - host: simplewebapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplewebapp-service
                port:
                  number: 80
